Allow internal reflection on collections